# HyTranslator

./: README.md  build.gradle.kts  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  hy-mt-jni.cpp
app/src/main/java/com/hytranslator/: HyTranslatorApp.kt  MainActivity.kt
app/src/main/java/com/hytranslator/file/: DocumentExtractor.kt
app/src/main/java/com/hytranslator/translator/: HyMTEngine.kt  Language.kt
app/src/main/java/com/hytranslator/ui/: FileTranslateScreen.kt  TextTranslateScreen.kt  TranslationState.kt  WebTranslateScreen.kt
app/src/main/java/com/hytranslator/web/: HtmlTranslator.kt
app/src/main/res/values/: strings.xml  themes.xml
